fixed slider visibility bug, reworked bookdata

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -199,7 +199,7 @@ body {
 	width: 100%;
 	height: 100%;
 	touch-action: none; // attempt to fix android swipe down reloads page
-	overflow-y: hidden; // attempt to fix android swipe down issue
+  //	overflow-y: hidden; // attempt to fix android swipe down issue (removed, this was making new div invisible)
 }
 
 #lens {
